--- a/Publications/index.html
+++ b/Publications/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
     
     <!-- Page Information -->
-    <title>Weilin's Home Page</title>
-    <meta name="author" content="Weilin ZOU（邹维林）">
+    <title>Shumin MA's Home Page</title>
+    <meta name="author" content="Shumin MA ">
     
     <!-- Resources -->
     <link rel="shortcut icon" href="/img/favicon.png">
