--- a/About/index.html
+++ b/About/index.html
@@ -85,7 +85,7 @@
         <!-- Page Content -->
         <div class="page" itemscope itemtype="http://schema.org/CreativeWork">
             <h2 class="page-title">About</h2>
-            <article>This is aaa.</article>
+            <article></article>
         </div>
     </main>
 
