--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="card-wrap" itemscope itemtype="http://schema.org/Person">
                 <!-- Avatar -->
                 <div class="author-avatar">
-                    <img class="avatar-img" src="/img/avatar.jpg" 
+                    <img class="avatar-img" src="PersonalPhoto.jpg" 
                          onerror="this.onerror=null;this.src='/img/profile.png'" 
                          alt="avatar">
                 </div>
